--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
         <link rel="manifest" href="/site.webmanifest" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <!-- Primary Meta Tags -->
+        <title>eashba.dev</title>
+        <meta name="title" content="eashba.dev" />
+        <meta name="description" content="Hey there, I'm Evan 👋 I like building things." />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://metatags.io/" />
+        <meta property="og:title" content="eashba.dev" />
+        <meta property="og:description" content="Hey there, I'm Evan 👋 I like building things." />
+        <meta
+            property="og:image"
+            content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+        />
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://metatags.io/" />
+        <meta property="twitter:title" content="eashba.dev" />
+        <meta property="twitter:description" content="Hey there, I'm Evan 👋 I like building things." />
+        <meta
+            property="twitter:image"
+            content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+        />
+
         <title>Evan Ashba</title>
     </head>
     <body>
